# rust-dev-sync

./: Cargo.toml  README.md
examples/: schema.config.yaml
src/: cli.rs  config.rs  fstree.rs  main.rs  notify_tokio.rs
src/rsync/: cli.rs  mod.rs
src/rsync/shell/: ssh.rs
src/syncers/: mod.rs  rsyncer.rs
