[package]
name = "rust-dev-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
notify = "5.0.0-pre.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
home = "0.5.3"
rand = "0.8.4"
async-trait = "0.1.52"
globset = "0.3"
clap = { version = "3.0.12", features = ["derive"] }